--- a/index.html
+++ b/index.html
@@ -139,16 +139,20 @@
       box-shadow: #444 5px 10px 2px;
       transform: scale(1.05);
     }
+    #copyright:hover{
+      text-decoration: underline;
+      text-decoration-color: white;
+    }
   </style>
 </head>
 <body>
 
   <!-- Navigation -->
-  <header class="navbar">
+  <header class="navbar" id="home">
     <nav>
-      <a class="navbar_contents" href="#">Home</a>
+      <a class="navbar_contents" href="#home">Home</a>
       <a class="navbar_contents" href="#about">About Me</a>
-      <a class="navbar_contents" href="#contact">Contact</a>
+      <a class="navbar_contents" href="#contact">Contact Me</a>
     </nav>
   </header>
 
@@ -189,9 +193,19 @@
     Visit my GitHub Profile
   </a>
 
-  <!-- Footer -->
+    <!-- Footer -->
   <footer id="contact">
-    <p>© 2024 Ritesh H. Shinde</p>
+    <p id="copyright">© 2024 Ritesh H. Shinde</p>
+    <p>
+      <a href="mailto:xyz@gmail.com" style="color: white; text-decoration: underline;">
+        📧 Email me
+      </a>
+    </p>
+    <p>
+      <a href="https://github.com/ritesh-codex" target="_blank" style="color: white; text-decoration: underline;">
+        💻 GitHub Profile
+      </a>
+    </p>
   </footer>  
 </body>
 </html>
