Added smooth transition to navbar links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
+    html{
+      scroll-behavior: smooth;
+    }
     body {
       background-color: #8ecbc4;
       font-family: 'Poppins', sans-serif;
@@ -181,7 +184,7 @@
   <!-- Hobbies Section -->
   <div class="section">
     <h2 class="section-title">Hobbies / Interests:</h2>
-    <ul>
+    <ul>                                   
       <li>Drawing</li>
       <li>Music</li>
       <li>Cooking</li>
