Made some changes to navbar and footer

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       display: flex;
       justify-content: flex-end; 
       padding: 10px 20px;
+      border-bottom-left-radius:1cm;
+      border-bottom-right-radius:1cm;
     }
 
     .navbar_contents {
@@ -121,6 +123,8 @@
       color: white;
       padding: 15px;
       background: #2863bd;
+      border-top-left-radius: 1cm;
+      border-top-right-radius: 1cm;
     }
 
     /* Links */
